trunk/Archive2/96/f2c003fa7d1999/output
+ g++-4.8 -std=c++98 -O2 -Wall -Wextra -pedantic-errors main.cpp
main.cpp: In function ‘int main()’:
main.cpp:5:5: warning: ‘auto’ changes meaning in C++11; please remove it [-Wc++0x-compat]
     auto strength;
     ^
main.cpp:5:10: error: ‘strength’ does not name a type
     auto strength;
          ^
main.cpp:9:18: error: ‘strength’ was not declared in this scope
      std::cin >> strength;
                  ^
